--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,8 @@
   --btn-primary-text: #171717;
   --primary-background-color: #13182a;
   --primary-front-color: #E43D4E;
+  --additional-background-color: #1B2139;
+  --additional-front-color: #FFF;
 }
 @import "./fonts/fonts";
 
