--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,12 +5,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 130px;
+  min-height: 140px;
   filter: drop-shadow(0px 6px 7px rgba(0, 0, 0, 0.25));
   z-index: 100;
   //border-bottom: #000 1px solid;
-  background-color: var(--primary-background-color);
-  opacity: .9;
+  background-color: rgba(19, 24, 42, 0.7);
+  //opacity: .7;
+  transition: .3s all;
   &__wrapper {
     display: flex;
     align-items: center;
@@ -27,8 +28,8 @@
     }
   }
   &__scrolled {
-    min-height: 100px;
-    opacity: 1;
+    min-height: 115px;
+    background-color: rgba(19, 24, 42, 1);
   }
   &__nav {
     float: right;
@@ -42,10 +43,10 @@
         color: var(--primary-front-color);
       }
       li {
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 500;
         letter-spacing: 1px;
-        margin-right: 20px;
+        margin-right: 50px;
         a {
           color: #fff;
           text-decoration: none;
