some sections added

--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,5 +1,5 @@
 .app {
   min-height: 200vh;
-  //background-color: var(--primary-background-color);
-  background: url("./test.jpg") no-repeat 50%/cover;
+  background-color: var(--primary-background-color);
+  //background: url("./test.jpg") no-repeat 50%/cover;
 }
