--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -7,6 +7,13 @@
 .mt20 {
   margin-top: 20px;
 }
+.mt40 {
+  margin-top: 40px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
 
 .mt150{
   margin-top: 150px;
@@ -14,4 +21,8 @@
 
 .fz22{
   font-size: 22px;
+}
+
+.trsltX350{
+  transform: translateX(-350);
 }
